@startuml

title __ABSTRACTFACTORY's Class Diagram__\n


    namespace View.AbstractFactory {
      class View.AbstractFactory.CovidRepresentationFactory {
          + createBarDiagram()
          + createLineDiagram()
      }
    }

  


    namespace View.AbstractFactory {
      class View.AbstractFactory.CriptoRepresentationFactory {
          + createBarDiagram()
          + createLineDiagram()
      }
    }

  


    namespace View.AbstractFactory {
      abstract class View.AbstractFactory.RepresentationAbstractFactory {
          {abstract} + createBarDiagram()
          {abstract} + createLineDiagram()
      }
    }

  

  View.AbstractFactory.CovidRepresentationFactory -up-|> View.AbstractFactory.RepresentationAbstractFactory
  View.AbstractFactory.CriptoRepresentationFactory -up-|> View.AbstractFactory.RepresentationAbstractFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
